--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "MIT",
   "main": "./lib/simple-dep.js",
   "dependencies": {
-    "shelljs": "^0.7.8"
+    "shelljs": "^0.7.8",
+    "inquirer": "^3.3.0",
+    "chalk": "^2.3.0",
+    "commander": "^2.11.0"
   },
   "devDependencies": {
     "mocha": "^2.2.4"
